--- a/store_app/pubspec.yaml
+++ b/store_app/pubspec.yaml
@@ -39,10 +39,16 @@ dependencies:
   image_compression_flutter: ^1.0.2
   win32: ^2.6.1
   modal_bottom_sheet: ^2.0.1
+  flutter_launcher_icons: ^0.9.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/image/logo.png"
 
 flutter:
   uses-material-design: true
